tests/build/cases/impl_ui_node/delegate_list_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type.rs:9:32
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | -------------------------------^-------------------------------------------------
  | |                              |
  | |                              the trait `UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNodeList`:
            <implementers-list>

error[E0277]: the trait bound `NotANodeList: UiNodeList` is not satisfied
 --> cases/impl_ui_node/delegate_list_expr_error_incorrect_type.rs:9:65
  |
9 | #[impl_ui_node(delegate_list = &self.inner, delegate_list_mut = &mut self.inner)]
  | ----------------------------------------------------------------^----------------
  | |                                                               |
  | |                                                               the trait `UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `UiNodeList`:
            <implementers-list>
